# MetaBonk

./: .gitignore  AGENTS.md  ALERT_VALIDATION_FAILURE.txt  AUTONOMOUS_24H_TRAINING_TASK.md  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_REPORT.md  LAUNCHER_README.md  MONITORING.md  README.md  README.txt  UNSOLVABLE_ISSUES.md  diagnose_gameplay_false_positive.sh  diagnose_root_cause.sh  game_agnostic_24h_config.env  game_agnostic_config_CORRECTED.env  generate_final_report.sh  install_launcher.sh  launch  launch.py  launch_with_config_verification.sh  monitor_24h_training_FIXED.sh  pytest.ini  quick_banding_diagnostic.sh  requirements-headless-streaming.txt  requirements-test.txt  requirements.txt  run_30m_gate.sh  run_hourly_validation.sh  start  state_classifier_configurable_thresholds.patch  test_vlm_hints.py  validation_checks_FIXED.sh
.meta/: context_master.md
configs/: agent_names.json  feats.megabonk.json  icon_canon.json  launch_24hr_test.json  launch_default.json  launch_production.json  megabonk_dataset.yaml  sinful_ppo_configs.yaml  streaming.yaml
docker/: docker-compose.cognitive.yml  docker-compose.go2rtc.exec.yml  docker-compose.go2rtc.yml  docker-compose.pbt.yml  go2rtc.exec.Dockerfile
rust/: Cargo.toml  README.md
rust/metabonk_frame_abi/: Cargo.toml
rust/metabonk_frame_abi/src/: lib.rs
rust/metabonk_smithay_eye/: Cargo.toml
rust/metabonk_smithay_eye/protocols/: ext-metabonk-control-v1.xml
rust/metabonk_smithay_eye/src/: args.rs  compositor.rs  frame_socket.rs  main.rs  protocols.rs  vulkan_producer.rs  xwayland_watchdog.rs
(+838 files in other folders)
