[workspace]
resolver = "2"
members = [
  "metabonk_frame_abi",
  "metabonk_smithay_eye",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "sync"] }

[patch.crates-io]
smithay = { path = "vendor/smithay-0.7.0" }
